# multiencl_bench

./: .gitignore  CMakeLists.txt  README.md
multiEnclaves/: CMakeLists.txt  Makefile
multiEnclaves/App/: App.cpp  App.h
multiEnclaves/Enclave/: Enclave.config.xml  Enclave1.cpp  Enclave1.edl
multiEnclaves/Enclave2/: Enclave.h  Enclave2.cpp  Enclave2.edl
